chore(blog) repair author section, article consistency (#1884)
* adds banner & title

* fix misalignment of authorTitle

* consistency and polish for lead-ins and banners

* Update blog/2023-08-17-lock-free-map-design-walkthrough.mdx


* thanks oliver :)

---------

--- a/src/theme/BlogPostPage/styles.module.css
+++ b/src/theme/BlogPostPage/styles.module.css
@@ -32,8 +32,9 @@
 
 .avatar {
   margin: 1rem 0;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 45px auto;
+  grid-template-rows: 1fr 1fr;
   gap: 0 1rem;
 }
 
@@ -47,7 +48,7 @@
 }
 
 .avatarName {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   margin: 0;
 }
 
